[tool.poetry]
name = "livy"
version = "0.10.3"
description = "Library to interact with Apache livy"
authors = ["tzing <tzingshih@gmail.com>"]
license = "MIT"
readme = "Readme.md"
homepage = "https://github.com/tzing/python-livy/"
repository = "git@github.com:tzing/python-livy.git"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.6.2"
colorama = {version = "^0.4.4", optional = true}
tqdm = {version = "^4.62.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.extras]
pretty = ["colorama", "tqdm"]

[tool.poetry.scripts]
livy = "livy.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=livy --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING",
    "__name__ == \"__main__\""
]
